--- a/src/app/components/ansi-colors/ansi-colors.component.html
+++ b/src/app/components/ansi-colors/ansi-colors.component.html
@@ -2,18 +2,36 @@
     <h1>ANSI Color Codes</h1>
   
     <h3>Basic Colors</h3>
-    @for (item of colors; track item) {
-        <div class="color-row" style="--color: {{ item.color }}; --bg-color: {{item.bgColor}}">
-            <button [cdkCopyToClipboard]="item.code" mat-icon-button>
-                <mat-icon>content_copy</mat-icon>
-            </button>
-            <div class="ansi-code">
-                <span>{{ item.code }}</span>
+    <div class="color-container">
+        @for (item of colors.basic; track item) {
+            <div class="color-row" style="--color: {{ item.color }}; --bg-color: {{item.bgColor}}">
+                <button [cdkCopyToClipboard]="item.code" mat-icon-button>
+                    <mat-icon>content_copy</mat-icon>
+                </button>
+                <div class="ansi-code">
+                    <span>{{ item.code }}</span>
+                </div>
+                <div class="color-description">
+                    <span>{{ item.desc }}</span>
+                </div>
             </div>
-            <div class="color-description">
-                <span>{{ item.desc }}</span>
+        }
+    </div>
+    <h3>Special Sequences</h3>
+    <div class="color-container">
+        @for (item of colors.special; track item) {
+            <div class="color-row" style="--color: {{ item.color }}; --bg-color: {{item.bgColor}}">
+                <button [cdkCopyToClipboard]="item.code" mat-icon-button>
+                    <mat-icon>content_copy</mat-icon>
+                </button>
+                <div class="ansi-code">
+                    <span>{{ item.code }}</span>
+                </div>
+                <div class="color-description">
+                    <span>{{ item.desc }}</span>
+                </div>
             </div>
-        </div>
-    }
+        }
+    </div>
 </div>
   
