--- a/src/app/components/ansi-colors/ansi-colors.component.scss
+++ b/src/app/components/ansi-colors/ansi-colors.component.scss
@@ -3,11 +3,16 @@
     background: #f5f5f5;
 }
 
+.color-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+
 .color-row {
     display: flex;
     align-items: center;
     padding: 0.5rem;
-    margin: 0.5rem 0;
     border-radius: 5px;
     background-color: var(--bg-color);
     color: var(--color);
