--- a/src/app/components/ansi-colors/ansi-colors.component.scss
+++ b/src/app/components/ansi-colors/ansi-colors.component.scss
@@ -28,3 +28,9 @@
     font-size: 0.9rem;
 }
   
+.close-button {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    cursor: pointer;
+}
