--- a/src/app/components/ansi-colors/ansi-colors.component.html
+++ b/src/app/components/ansi-colors/ansi-colors.component.html
@@ -1,6 +1,5 @@
 <div class="ansi-colors-container">
     <h1>ANSI Color Codes</h1>
-  
     <h3>Basic Colors</h3>
     <div class="color-container">
         @for (item of colors.basic; track item) {
@@ -34,4 +33,8 @@
         }
     </div>
 </div>
-  
+<button mat-icon-button class="close-button" routerLink="/">
+    <mat-icon>
+        close
+    </mat-icon>
+</button>
