--- a/src/app/components/ansi-colors/ansi-colors.component.scss
+++ b/src/app/components/ansi-colors/ansi-colors.component.scss
@@ -1,11 +1,13 @@
 .ansi-colors-container {
     padding: 1rem;
     background: #f5f5f5;
+    width: calc(100vw - 2rem);
+    overflow: hidden;
 }
 
 .color-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     gap: 1rem;
 }
 
@@ -33,4 +35,10 @@
     top: 0.5rem;
     right: 0.5rem;
     cursor: pointer;
+}
+
+@media (min-width: 576px) {
+    .color-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
