--- a/src/app/components/compare-text/compare-text.component.scss
+++ b/src/app/components/compare-text/compare-text.component.scss
@@ -12,13 +12,16 @@
     width: 90%;
     gap: 1rem;
     margin: 1rem 0;
-}
 
-textarea {
-    width: 50%;
-    height: 30vh;
-    padding: 0.5rem;
-    background: white;
-    overflow-y: auto;
-    border: 1px solid #ccc;
+    * {
+        width: 50%;
+        height: 30vh;
+        padding: 0.5rem;
+        overflow-y: auto;
+    }
+
+    textarea {
+        background: white;
+        border: 1px solid #ccc;
+    }
 }
