--- a/src/app/components/compare-text/compare-text.component.scss
+++ b/src/app/components/compare-text/compare-text.component.scss
@@ -29,10 +29,16 @@
 table {
     width: 90%;
     margin: 1rem 0;
+    table-layout: fixed;
 
     td {
-        width: 50%;
         white-space: pre-wrap;
         word-wrap: break-word;
+        overflow-wrap: break-word;
+        padding: 0.5rem;
+    }
+
+    span {
+        display: inline-block;
     }
 }
