outsource close button

--- a/src/app/components/ansi-colors/ansi-colors.component.html
+++ b/src/app/components/ansi-colors/ansi-colors.component.html
@@ -33,8 +33,4 @@
         }
     </div>
 </div>
-<button mat-icon-button class="close-button" routerLink="/">
-    <mat-icon>
-        close
-    </mat-icon>
-</button>
+<app-close></app-close>
