display info dialog for text comparator

--- a/src/app/components/compare-text/compare-text.component.html
+++ b/src/app/components/compare-text/compare-text.component.html
@@ -31,3 +31,6 @@
     }
 </div>
 <app-close></app-close>
+<button mat-icon-button class="info-button" (click)="openInfo()">
+    <mat-icon>info</mat-icon>
+</button>
