--- a/src/app/components/compare-text/compare-text.component.scss
+++ b/src/app/components/compare-text/compare-text.component.scss
@@ -2,9 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
     padding: 1rem;
-    background-color: #f4f4f4;
 }
 
 .text-container {
@@ -41,4 +39,11 @@ table {
     span {
         display: inline-block;
     }
+}
+
+.info-button {
+    position: absolute;
+    top: 0.5rem;
+    left: 0.5rem;
+    cursor: pointer;
 }
