--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 html {
     scroll-behavior: smooth;
     scrollbar-width: none;
+    background: radial-gradient(circle at center, #2d2a55, #1e1c3b 60%, #0e0c22);
 }
 
 html,
