--- a/src/app/components/ansi-colors/ansi-colors.component.scss
+++ b/src/app/components/ansi-colors/ansi-colors.component.scss
@@ -1,8 +1,12 @@
 .ansi-colors-container {
     padding: 1rem;
-    background: #f5f5f5;
     width: calc(100vw - 2rem);
     overflow: hidden;
+}
+
+h1, h3 {
+    color: white;
+    text-align: center;
 }
 
 .color-container {
