--- a/src/app/components/compare-text/compare-text.component.scss
+++ b/src/app/components/compare-text/compare-text.component.scss
@@ -5,6 +5,14 @@
     padding: 1rem;
 }
 
+h1 {
+    color: white;
+}
+
+mat-button-toggle {
+    background-color: white;
+}
+
 .text-container {
     display: flex;
     width: 90%;
@@ -33,7 +41,7 @@ table {
         white-space: pre-wrap;
         word-wrap: break-word;
         overflow-wrap: break-word;
-        padding: 0.5rem;
+        padding: 0.25rem;
     }
 
     span {
@@ -45,5 +53,6 @@ table {
     position: absolute;
     top: 0.5rem;
     left: 0.5rem;
+    color: white;
     cursor: pointer;
 }
