--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,5 +3,15 @@
     justify-content: space-between;
     width: calc(100vw - 2rem);
     padding: 1rem;
-    border-top: 0.5px solid black;
+    border-top: 1px solid black;
+    background-color: #181818;
+    color: white;
+
+    a {
+        color: royalblue;
+    }
+
+    a:hover {
+        color: slateblue;
+    }
 }
