--- a/src/app/components/compare-text/compare-text.component.html
+++ b/src/app/components/compare-text/compare-text.component.html
@@ -1,5 +1,5 @@
 <div class="compare-text-container">
-    <h1>Compare Texts</h1>
+    <h1>Compare Text</h1>
     <mat-button-toggle-group [(ngModel)]="comparisonMode" (change)="comparisonMode = $event.value">
         <mat-button-toggle value="lines">Lines</mat-button-toggle>
         <mat-button-toggle value="words">Words</mat-button-toggle>
