editable list of replacements

--- a/src/app/components/plain-math/math-dialog/math-dialog.component.html
+++ b/src/app/components/plain-math/math-dialog/math-dialog.component.html
@@ -1,12 +1,14 @@
-<h1 mat-dialog-title>{{ data.title }}</h1>
-    <div mat-dialog-content>
-        <p>{{ data.description }}</p>
-        <mat-form-field appearance="outline" class="w-full">
-        <mat-label>Input</mat-label>
-        <input matInput [(ngModel)]="inputValue">
-    </mat-form-field>
-</div>
-<div mat-dialog-actions align="end">
-    <button mat-button (click)="onCancel()">Cancel</button>
-    <button mat-flat-button color="primary" (click)="onSubmit()">Submit</button>
-</div>
+<form (ngSubmit)="onSubmit()">
+    <h1 mat-dialog-title>{{ data.title }}</h1>
+        <div mat-dialog-content>
+            <p>{{ data.description }}</p>
+            <mat-form-field appearance="outline" class="w-full">
+            <mat-label>Input</mat-label>
+            <input matInput [(ngModel)]="inputValue" name="inputValue">
+        </mat-form-field>
+    </div>
+    <div mat-dialog-actions align="end">
+        <button mat-button (click)="onCancel()">Cancel</button>
+        <button mat-flat-button color="primary" (click)="onSubmit()" type="submit">Submit</button>
+    </div>
+</form>
